force-app/main/default/objects/Finanzierungsanfrage__c/fields/WelcheUnterlagenWerdenGefordert__c.field-meta.xml
<CustomField>
    <fullName>WelcheUnterlagenWerdenGefordert__c</fullName>
    <label>Welche Unterlagen werden gefordert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>3 Monate durchgehende Kontoauszüge aller privaten Girokonten</fullName>
            </value>
            <value>
                <fullName>6 Wochen durchgehende Kontoauszüge aller privaten Girokonten</fullName>
            </value>
            <value>
                <fullName>aktuelle BWA inkl. Summen- und Saldenliste</fullName>
            </value>
            <value>
                <fullName>aktueller Rentenbescheid (bei Rentner)</fullName>
            </value>
            <value>
                <fullName>Aufstellung der geplanten Modernisierungskosten (bei geplanter Modernisierung / Sanierung)</fullName>
            </value>
            <value>
                <fullName>Bausparvertrag: letzter Jahreskontoauszug</fullName>
            </value>
            <value>
                <fullName>bei abzulösenden Darlehen die Kopie vom Jahreskontoauszug vom letzten Jahr (alternativ: Nachweis aktueller Darlehensstand)</fullName>
            </value>
            <value>
                <fullName>Berechnung zum KfW-Antrag im Original gem. Online-Bestätigung (bei KfW-Anträgen)</fullName>
            </value>
            <value>
                <fullName>BWA inkl. Summen- und Saldenliste per letzten Jahresende (wenn kein JA bzw. EÜR vorliegt)</fullName>
            </value>
            <value>
                <fullName>Darlehensvertrag: Kopien sämtlicher Darlehensverträge (Ersten vier Seiten)</fullName>
            </value>
            <value>
                <fullName>des Darlehensnehmers (bei Kreditlaufzeit bis in die Rentenphase)</fullName>
                <isActive>false</isActive>
                <label>des Darlehensnehmers (bei Kreditlaufzeit bis in die Rentenphase)</label>
            </value>
            <value>
                <fullName>EK Nachweise mit persönlichen Angaben (Name, Konto-/Depot Nr., Datum, Betrag)</fullName>
            </value>
            <value>
                <fullName>EÜ-Rechnung/vollständiger Jahresabschluss der letzten 2 Jahre</fullName>
            </value>
            <value>
                <fullName>für Nicht-EU-Bürger ist eine unbefristete Aufenthaltsgenehmigung erforderlich</fullName>
            </value>
            <value>
                <fullName>für weitere Immobilien (bei Vermietungsobjekt)</fullName>
                <isActive>false</isActive>
                <label>für weitere Immobilien (bei Vermietungsobjekt)</label>
            </value>
            <value>
                <fullName>Immobilienaufstellung mit Mieterliste bzw. Mietverträge</fullName>
                <isActive>false</isActive>
                <label>Immobilienaufstellung mit Mieterliste bzw. Mietverträge</label>
            </value>
            <value>
                <fullName>Immobilienaufstellung mit Mieterliste bzw. Mietverträge und Kontoauszug des Mieteingangs</fullName>
                <isActive>false</isActive>
                <label>Immobilienaufstellung mit Mieterliste bzw. Mietverträge und Kontoauszug des Mieteingangs</label>
            </value>
            <value>
                <fullName>Immobilienaufstellung mit Mieterliste bzw. Mietverträge und Kontoauszug des Mieteingangs für weitere Immobilien (bei Vermietungsobjekt)</fullName>
            </value>
            <value>
                <fullName>Individuelle Unterlagen 1</fullName>
            </value>
            <value>
                <fullName>Individuelle Unterlagen 2</fullName>
            </value>
            <value>
                <fullName>Individuelle Unterlagen 3</fullName>
            </value>
            <value>
                <fullName>Jahreslohnsteuerbescheinigung des vergangenen Jahres</fullName>
            </value>
            <value>
                <fullName>KfW-Antrag oder KfW-Einwilligungserklärung/Vollmacht vollständig ausgefüllt und unterschrieben (bei KfW-Anträgen Kopie Darlehensvertrag des abzulösenden Darlehens)</fullName>
            </value>
            <value>
                <fullName>Kontoauszüge des Gehaltskontos (letzte 3 Monate)</fullName>
            </value>
            <value>
                <fullName>Lebens-&amp; Rentenversicherung: letzter Nachtrag</fullName>
            </value>
            <value>
                <fullName>letzte Bezügemitteilung zzg. ggf. Kontoauszug als Nachweis der Aktualität (nur bei Beamten)</fullName>
            </value>
            <value>
                <fullName>letzte Einkommensteuererklärung (bei Bedarf)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>