force-app/main/default/objects/Finanzierungsanfrage__c/fields/WiedervorlageAm__c.field-meta.xml
<CustomField>
    <fullName>WiedervorlageAm__c</fullName>
    <label>Wiedervorlage am</label>
    <type>Date</type>
</CustomField>