force-app/main/default/objects/Finanzierungsanfrage__c/fields/WurdeImImmoGroupPortalAngesehen__c.field-meta.xml
<CustomField>
    <fullName>WurdeImImmoGroupPortalAngesehen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wurde im ImmoGroup Portal angesehen</label>
    <type>Checkbox</type>
</CustomField>