force-app/main/default/objects/Finanzierungsanfrage__c/fields/WurdeImImmoGroupPortalAngesehenVon__c.field-meta.xml
<CustomField>
    <fullName>WurdeImImmoGroupPortalAngesehenVon__c</fullName>
    <label>Wurde im ImmoGroup Portal angesehen von</label>
    <length>255</length>
    <type>Text</type>
</CustomField>