force-app/main/default/objects/Finanzierungsanfrage__c/fields/ZinsbindungBis__c.field-meta.xml
<CustomField>
    <fullName>ZinsbindungBis__c</fullName>
    <label>Zinsbindung bis</label>
    <type>Date</type>
</CustomField>