force-app/main/default/objects/Finanzierungsanfrage__c/fields/ZinsbindungswunschInJahren__c.field-meta.xml
<CustomField>
    <fullName>ZinsbindungswunschInJahren__c</fullName>
    <label>Zinsbindungswunsch in Jahren</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>