force-app/main/default/objects/Finanzierungsanfrage__c/fields/ZweiterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ZweiterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zweiter Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finanzierungsanfragen (Zweiter Käufer)</relationshipLabel>
    <relationshipName>FinanzierungsanfragenZweiterKaeufer</relationshipName>
    <type>Lookup</type>
</CustomField>