force-app/main/default/objects/Finanzierungsanfrage__c/validationRules/ApprovalRequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovalRequiredFields</fullName>
    <active>true</active>
    <errorConditionFormula>GenehmigtVonFinanzierungsberater__c &amp;&amp; (IsBlank(MaximaleFinanzierungssumme__c) || IsBlank(ErsterKaeufer__c) || IsBlank(Finanzierungsbedarf__c) || IsBlank(Opportunity__r.Appartement__c))</errorConditionFormula>
    <errorMessage>Die folgenden Felder müssen zur Genehmigung ausgefüllt sein: Maximale Finanzierungssumme, Erster Käufer, Finanzierungsbedarf und das Apartment in der VKC.</errorMessage>
</ValidationRule>