force-app/main/default/objects/Finanzierungsanfrage__c/validationRules/BankCantBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>BankCantBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Phase__c) = &apos;Bankantrag&apos; &amp;&amp; IsChanged(Phase__c) &amp;&amp; IsBlank(Kreditinstitut__c)</errorConditionFormula>
    <errorDisplayField>Kreditinstitut__c</errorDisplayField>
    <errorMessage>Das Kreditinstitut darf in dieser Phase nicht leer sein</errorMessage>
</ValidationRule>