force-app/main/default/objects/Finanzierungsanfrage__c/validationRules/DarlehensvertragMussVorliegen.validationRule-meta.xml
<ValidationRule>
    <fullName>DarlehensvertragMussVorliegen</fullName>
    <active>false</active>
    <errorConditionFormula>IsChanged(Phase__c) &amp;&amp;
TEXT(Phase__c) = &apos;Finanzierung genehmigt&apos; &amp;&amp; IsBlank(DatumDarlehensvertragLiegtVor__c)</errorConditionFormula>
    <errorDisplayField>DatumDarlehensvertragLiegtVor__c</errorDisplayField>
    <errorMessage>Bitte das Datum eintragen seit wann der Darlehensvertrag vorliegt.</errorMessage>
</ValidationRule>