force-app/main/default/objects/Finanzierungsanfrage__c/validationRules/ReasonForRatingCantBeNull.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonForRatingCantBeNull</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(AmpelIntern__c) == &apos;Rot&apos; || TEXT(AmpelIntern__c) == &apos;Gelb&apos;) &amp;&amp;  IsBlank(GrundBewertung__c)</errorConditionFormula>
    <errorDisplayField>GrundBewertung__c</errorDisplayField>
    <errorMessage>Bei &quot;roten&quot; oder &quot;gelben&quot; Bewertungen muss ein Grund angegeben werden.</errorMessage>
</ValidationRule>