force-app/main/default/objects/Finanzierungsanfrage__c/validationRules/SharePointLinkCantBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>SharePointLinkCantBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>IsChanged(Phase__c) &amp;&amp; IsBlank(SharepointLink__c) &amp;&amp; Text(Phase__c) != &apos;Finanzierung verloren&apos; &amp;&amp; Text(Phase__c) != &apos;Finanzierung pausiert&apos;</errorConditionFormula>
    <errorDisplayField>SharepointLink__c</errorDisplayField>
    <errorMessage>Der Sharepoint Link muss befüllt sein</errorMessage>
</ValidationRule>