force-app/main/default/objects/Finanzierungsanfrage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AmpelInternImg__c</columns>
    <columns>GrundBewertung__c</columns>
    <columns>Phase__c</columns>
    <columns>BeurkundungMoeglich__c</columns>
    <columns>PhaseOpportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Info__c</columns>
    <columns>WiedervorlageAm__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Maklerbetreuer__c</columns>
    <columns>AmpelIntern__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>Finanzierungsanfrage gestellt,VSA vorhanden,Rückfragen gestellt,Unterlagen angefordert,Bankantrag,Finanzierung pausiert</value>
    </filters>
    <label>Alle</label>
</ListView>