force-app/main/default/objects/Finanzierungsanfrage__c/listViews/Finanzierungen_Eigenkapitalzahlung.listView-meta.xml
<ListView>
    <fullName>Finanzierungen_Eigenkapitalzahlung</fullName>
    <columns>NAME</columns>
    <columns>AmpelInternImg__c</columns>
    <columns>GrundBewertung__c</columns>
    <columns>Phase__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>WelcheUnterlagenWerdenGefordert__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Finanzierung__c</field>
        <operation>equals</operation>
        <value>Eigenkapitalzahlung</value>
    </filters>
    <label>Finanzierungen Eigenkapitalzahlung</label>
</ListView>