force-app/main/default/objects/Finanzierungsanfrage__c/listViews/Finanzierungen_extern.listView-meta.xml
<ListView>
    <fullName>Finanzierungen_extern</fullName>
    <columns>NAME</columns>
    <columns>AmpelInternImg__c</columns>
    <columns>GrundBewertung__c</columns>
    <columns>Phase__c</columns>
    <columns>Finanzierung__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Finanzierung__c</field>
        <operation>equals</operation>
        <value>Fremdfinanzierung</value>
    </filters>
    <label>Finanzierungen extern</label>
</ListView>