force-app/main/default/objects/Finanzierungsanfrage__c/listViews/Finanzierungen_extern_aktuell.listView-meta.xml
<ListView>
    <fullName>Finanzierungen_extern_aktuell</fullName>
    <columns>NAME</columns>
    <columns>AmpelInternImg__c</columns>
    <columns>GrundBewertung__c</columns>
    <columns>Phase__c</columns>
    <columns>Finanzierung__c</columns>
    <columns>Maklerbetreuer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Finanzierung__c</field>
        <operation>equals</operation>
        <value>Fremdfinanzierung</value>
    </filters>
    <filters>
        <field>Phase__c</field>
        <operation>notEqual</operation>
        <value>Finanzierung pausiert,Finanzierung genehmigt,Finanzierung verloren</value>
    </filters>
    <label>Finanzierungen extern, aktuell</label>
</ListView>