force-app/main/default/objects/Finanzierungsanfrage__c/listViews/Finanzierungsanfragen_Paulina.listView-meta.xml
<ListView>
    <fullName>Finanzierungsanfragen_Paulina</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Finanzierungsanfragen Paulina</label>
</ListView>